--- a/css/main.scss
+++ b/css/main.scss
@@ -33,10 +33,19 @@ section {
     gap: 1em 1em;
 }
 
-.results-table {
+.results-table, .fight-club {
     box-shadow: 5px 5px 5px grey;
     background-color: $table_bg_clr;
     border-radius: 8px;
+}
+
+.fight-club.new-tribe td {
+    text-align: center;
+    border: none;
+}
+
+.fight-club.new-tribe button {
+    width: 8em;
 }
 
 table, td, th {
@@ -53,26 +62,43 @@ th {
     font-weight: normal;
 }
 
-.results td {
+td {
     text-align: right;
     width: 5em;
     border-top: 1px solid $table_line_clr;
 }
 
-.results th:first-child {
+th:first-child {
     text-align: left;
     border-right: 1px solid $table_line_clr;
 }
 
 /* Keep this below th:first-child */
-.results th:empty {
+th:empty {
     border: none;
 }
 
 .small {
     font-weight: normal;
+    font-size: smaller;
 }
 
 button {
-    margin: 0 5px;
+    margin: 0 4px;
+    font-weight: bold;
+}
+
+.but_td {
+    width: 7em;
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+}
+
+.values {
+    //background-color: white;
+}
+
+.rem_but {
+    text-align: center;
 }
