hide buttons for not adjustable values

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,14 @@ article {
     padding: 1em;
 }
 
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+    font-size: 1.5em;
+}
+
 .results{
     background-color: $bg_clr;
 }
@@ -37,15 +45,7 @@ section {
     box-shadow: 5px 5px 5px grey;
     background-color: $table_bg_clr;
     border-radius: 8px;
-}
-
-.fight-club.new-tribe td {
-    text-align: center;
-    border: none;
-}
-
-.fight-club.new-tribe button {
-    width: 8em;
+    display: flex;
 }
 
 table, td, th {
@@ -73,14 +73,29 @@ th:first-child {
     border-right: 1px solid $table_line_clr;
 }
 
-/* Keep this below th:first-child */
-th:empty {
+.results th:empty {
     border: none;
+}
+
+.fight-club.new-tribe {
+   align-items: self-start;
+}
+.fight-club.new-tribe td {
+    border: none;
+}
+
+.fight-club.new-tribe button {
+    width: 10em;
+}
+
+.fight-club tr:nth-child(odd) th {
+    border-bottom: 1px solid #a1a1a1;
 }
 
 .small {
     font-weight: normal;
     font-size: smaller;
+    text-align: center;
 }
 
 button {
@@ -99,6 +114,7 @@ button {
     //background-color: white;
 }
 
-.rem_but {
+.fight-club td.rem_but {
     text-align: center;
+    vertical-align: bottom;
 }
